--- a/lashaDaZura/style.css
+++ b/lashaDaZura/style.css
@@ -115,3 +115,14 @@ a:hover{
 /*    width: 400px;*/
 /*    height: 400px;*/
 /*}*/
+
+.ragaca{
+    display: none;
+}
+
+.ragaca.active{
+    display: block;
+    width: 100px;
+    height: 100px;
+    background-color: blue;
+}
