--- a/ptjk/style.css
+++ b/ptjk/style.css
@@ -5,21 +5,27 @@
     font-family: "helvetica", serif;
 }
 
+
 .wrapper{
    max-width: 1440px;
    height: 1400px;
    margin: 0 auto;
+   position: relative;
+}
+
+.main{
+    padding: 20px;
 }
 
 .header{
     background-color: #f6f8f9;
-    position: fixed;
-    width: 100%;
+    position: sticky ;
     top: 0;
 }
 
 .nav_items{
     display: flex;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
 }
@@ -29,6 +35,7 @@
     color: #FA6980;
     animation: logoAnimation 4s linear infinite;
     animation-direction: alternate;
+
 }
 
 @keyframes logoAnimation {
@@ -69,7 +76,6 @@
 .topSectionWrapper{
     display: flex;
     justify-content: space-between;
-    padding: 5px;
     margin-top: 60px;
 }
 
@@ -177,4 +183,61 @@
     .textsWrapp{
         flex-direction: column;
     }
+}
+
+
+/*content section*/
+
+
+.contentWrapper{
+    max-width: 1440px;
+    background-color: #f6f8f9;
+    height: 600px;
+}
+
+.trendingBoxes{
+  display: flex;
+  justify-content: space-between;
+}
+.title{
+    font-weight: bold;
+    padding: 40px 0px;
+}
+.box{
+    flex: 1;
+    margin-right: 40px;
+    border-radius: 15px;
+    overflow: hidden;
+    background-color: #fff;
+    box-shadow: 2px 3px 10px #000;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.box:hover{
+    transform: scale(105%) rotate(360deg);
+}
+.box:last-child{
+    margin: 0;
+}
+.imageBox{
+    width: 100%;
+    height: 50%;
+}
+.imageBox img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.textBox{
+    padding: 30px;
+    line-height: 23px;
+
+}
+.textBox b{
+    color: #000;
+    font-size: 16px;
+}
+.textBox p{
+    color: #A6ADB4;
+    font-size: 13px;
 }
